<resources>
    <string name="app_name">U Connect</string>
    <string name="pass_hint">Password...</string>
    <string name="email_hint">Your Email...</string>
    <string name="login_logo_desc">Logo Login Page</string>
    <string name="login_btn_text">Login to account</string>
    <string name="login_reg_btn_text">Need a new Account?</string>
    <string name="action_search_text">Search</string>
    <string name="action_setting_text">Account Settings</string>
    <string name="action_logout_text">Logout</string>
    <string name="reg_btn_text">Create new Account</string>
    <string name="reg_login_text">Already have an Account?</string>
    <string name="reg_pass_text">Password...</string>
    <string name="reg_confirm_pass_text">Confirm Password...</string>
    <string name="setup_name_hint">Your Name...</string>
    <string name="setup_save_btn">Save Account Settings</string>
    <string name="setup_name_hint_text">Your Username ...</string>
    <string name="setup_btn_name_text">Save Account Settings</string>
    <string name="post_desc_hint">Add Description ...</string>
    <string name="new_post_btn_hint">Post</string>
    <string name="bottom_home_text">Home</string>
    <string name="bottom_users_text">Other Users</string>
    <string name="bottom_ac_text">Account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mode">Mode</string>
    <string name="submit">Submit</string>
    <string name="username">Username</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="bio">Your Status...</string>
    <string name="zbio">Status</string>
    <string name="e"> </string>
    <string name="welcome">Welcome</string>
    <string name="delete_user">Delete User</string>
    <string name="sign_out">Sign Out</string>
    <string name="change_password">Change Password</string>
    <string name="additional_settings">Additional Settings</string>
    <string name="open_whatsapp">open whatsapp</string>
    <string name="see_admins">See Admins</string>
    <string name="blog_post_date">Post Date</string>
    <string name="delete">Delete</string>
    <string name="comments">Comments</string>
    <string name="arrow"><![CDATA[>]]></string>
    <string name="world_chat">World Chat</string>
    <string name="your_message">Your Message...</string>
    <string name="views">Views</string>
    <string name="posts">Posts</string>
    <string name="view_posts">View Posts</string>
    <string name="click_here">Click Here</string>
    <string name="place_your_finger_on_the_scanner_to_proceed_or_enter_your_password">Place your Finger on the Scanner to Proceed or Enter your Password</string>
    <string name="fingerprint_authentication">Fingerprint Authentication</string>
    <string name="reset_password">Reset Messages Password</string>
    <string name="set">SET</string>
    <string name="enter_a_password">Enter a PIN</string>
    <string name="confirm_your_password">Confirm your PIN</string>
    <string name="set_password">set password</string>
    <string name="if_you_dont_have_a_pin_or_you_want_to_reset_your_pin_go_to_account_settings_additional_setting_or_click_here"><![CDATA[If you don\'t have a pin or you want to reset your pin click here and go to \'Additional Settings\']]></string>
    <string name="reload">Reload</string>
    <string name="send">send</string>
    <string name="enter_message">Enter message...</string>
    <string name="you_can_change_your_pin_by_clicking_here">You can change your pin by clicking here</string>
    <string name="if_you_want_to_change_your_pin_click_here_and_go_to_additional_setting">If you want to change your pin, click here and go to additional setting</string>
    <string name="new_message">New Message</string>
    <string name="message">Message</string>
</resources>
