<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminsActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="@string/reset_password"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/messPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/messConfirmPass"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="192dp"
        android:ems="10"
        android:hint="@string/enter_a_password"
        android:inputType="number"
        android:textColorHint="#6e6e6e"
        tools:ignore="Autofill,LabelFor,TextFields" />

    <EditText
        android:id="@+id/messConfirmPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="261dp"
        android:ems="10"
        android:hint="@string/confirm_your_password"
        android:inputType="number"
        android:textColorHint="#6e6e6e"
        tools:ignore="Autofill,LabelFor" />

    <Button
        android:id="@+id/setPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="97dp"
        android:background="@color/colorAccent"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:text="@string/set" />

    <ProgressBar
        android:id="@+id/resetPinProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="374dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:indeterminate="true"
        android:visibility="invisible"/>

</RelativeLayout>
