<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FingerprintActivity">


    <TextView
        android:id="@+id/headingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:text="@string/fingerprint_authentication"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/fingerprintImage"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_below="@+id/headingLabel"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/ic_launcher"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/paraLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fingerprintImage"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:text="@string/place_your_finger_on_the_scanner_to_proceed_or_enter_your_password"
        android:textAlignment="center" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="153dp"
        android:layout_marginBottom="87dp"
        android:background="#ff1700"
        android:text="@string/click_here"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="222dp"
        android:ems="10"
        android:inputType="number"
        android:visibility="invisible"
        tools:ignore="Autofill,LabelFor,TextFields" />

    <Button
        android:id="@+id/check_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="88dp"
        android:background="#ff1700"
        android:text="@string/click_here"
        android:textColor="@color/black"
        android:visibility="invisible" />

<!--    <TextView-->
<!--        android:id="@+id/user_pin"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_alignParentStart="true"-->
<!--        android:layout_alignParentTop="true"-->
<!--        android:textColor="@color/white"-->
<!--        android:text="@string/e" />-->

    <TextView
        android:id="@+id/set_pin"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_alignEnd="@+id/fingerprintImage"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-156dp"
        android:textColor="#3167a6"
        android:text="@string/if_you_want_to_change_your_pin_click_here_and_go_to_additional_setting" />

</RelativeLayout>
